iac_files_32/iac-file-287.tf

resource "aws_network_acl" "allowed" {
  vpc_id = "id-xxxx"
  egress {
    protocol   = "tcp"
    rule_no    = 200
    action     = "allow"
    cidr_block = "10.3.0.0/18"
    from_port  = 443
    to_port    = 443
  }
  ingress {
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = "10.3.0.0/18"
    from_port  = 80
    to_port    = 80
  }
  tags = {
    Name = "main"
  }
}
